--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,17 +8,16 @@ plugins {
 
 android {
     namespace = "com.example.firstly"
-    compileSdk = 34 // กำหนด compileSdk เป็นค่าที่แน่นอน (เวอร์ชันล่าสุดที่ติดตั้ง)
+    compileSdk = 35 // กำหนด compileSdk เป็นค่าที่แน่นอน (เวอร์ชันล่าสุดที่ติดตั้ง)
     ndkVersion = "25.1.8937393" // กำหนด ndkVersion ตามคำแนะนำเพื่อความเข้ากันได้
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = "1.8" // กำหนดค่าให้ตรงกับเวอร์ชันที่ใช้
-        freeCompilerArgs += ["-Xjvm-default=all"]
+        jvmTarget = "17" // กำหนดค่าให้ตรงกับเวอร์ชันที่ใช้
     }
 
     defaultConfig {
@@ -27,7 +26,7 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdkVersion 21 // หรือเวอร์ชันขั้นต่ำที่คุณต้องการใช้
-        targetSdkVersion 34 // หรือเวอร์ชันเป้าหมายที่คุณต้องการใช้
+        targetSdkVersion 35 // หรือเวอร์ชันเป้าหมายที่คุณต้องการใช้
         
         versionCode = 1 // กำหนด versionCode ของแอป
         versionName = "1.0" // กำหนด versionName ของแอป
